[project]
name = "kassparo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.37.1",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-groq>=1.1.0",
    "langgraph>=1.0.4",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]
